@@ -83,6 +83,7 @@ nvidia-graphics-drivers (340.108-1~git4deb9stretch) UNRELEASED; urgency=medium
     longer available after NOUVEAU_LEGACY_CTX_SUPPORT (and thus DRM_LEGACY)
     got finally disabled.
   * Update lintian overrides.
+  * Use a version=4 watch file.
   * Bump Standards-Version to 4.5.1. No changes needed.
 
   [ Vincent Cheng ]
